--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,8 @@ body{
     background-size: auto; overflow: hidden;
 }
 
+div{ overflow: visible; }
+
 .Title_wrapper{
     position: relative;
     margin: 30px auto;
@@ -17,23 +19,30 @@ body{
 
 #Title_container{
     position: relative;
+    height: 60px;
     font-size: 45px;
     color: #fcad7f;
 }
 
+#Button_wrapper{
+    position: relative;
+    margin: 10px auto;
+    height: 50px;
+}
+
 #Button_container{
     position: relative;
-    margin: -20px auto;
+    margin: 30px auto;
+    width: 500px;
     height: 60px;
 }
 
 .Title_button{
-    position: absolute;
-    display: block;
+    position: relative;
     padding: 10px 10px;
+    float: left;
+    margin-left: 65px;
     background-color: #8f7a66;
-    width: 110px;
-    height: 20px;
     color: white;
     font-size: 15px;
     text-decoration: none;
@@ -45,42 +54,43 @@ body{
     opacity: 0.7;
 }
 
-#New_game{
-    left: 36%;
+#New_game, #High_score{
+    width: 110px;
+    height: 20px;
 }
 
-#High_score{
-    right: 35%;
+#New_game{
+    margin-left: 35px;
 }
 
 #Tiger_Mode{
     margin-top: 2px;
-    margin-left: 2px;
+    margin-left: 67px;
     width: 15px;
     height: 15px;
-    left: 49%;
 }
+
 #Score_container{
     position: relative;
     margin: 15px auto;
-    font-family: "DIN Alternate";
+    font-family: "Microsoft YaHei";
     font-weight: bold;
     font-size: 30px;
-    color: #aaaaaa;
+    color: #8b8c93;
     opacity: 0.8;
 }
 
 #Grid_wrapper{
     position: relative;
-    left: 32%;
+    margin: -15px auto;
     width: 470px;
     height: 470px;
-    margin-top: -15px;
     padding: 30px;
 }
 
 #Backgound_container{
-    position: absolute;
+    position: relative;
+    margin: 0 auto;
     width: 470px;
     height: 470px;
     border-radius: 10px;
@@ -89,9 +99,9 @@ body{
 }
 
 #Grid_container{
+    margin: -470px auto;
     width: 470px;
     height: 470px;
-    padding: 15px;
 }
 
 .grid_cell{
